--- a/BreakOutClone/BreakOutClone.vcxproj
+++ b/BreakOutClone/BreakOutClone.vcxproj
@@ -42,6 +42,10 @@
     <IncludePath>C:\Work\BreakOutClone\SDL2_image-2.0.1\include;C:\Work\BreakOutClone\SDL2-2.0.4\include;C:\Work\BreakOutClone\SDL2_ttf-2.0.14\include;C:\Work\BreakOutClone\SDL2_mixer-2.0.1\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Work\BreakOutClone\SDL2_image-2.0.1\lib\x86;C:\Work\BreakOutClone\SDL2-2.0.4\lib\x86;C:\Work\BreakOutClone\SDL2_ttf-2.0.14\lib\x86;C:\Work\BreakOutClone\SDL2_mixer-2.0.1\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>C:\Work\BreakOutClone\SDL2-2.0.4\include;C:\Work\BreakOutClone\SDL2_image-2.0.1\include;C:\Work\BreakOutClone\SDL2_ttf-2.0.14\include;C:\Work\BreakOutClone\SDL2_mixer-2.0.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Work\BreakOutClone\SDL2-2.0.4\lib\x86;C:\Work\BreakOutClone\SDL2_image-2.0.1\lib\x86;C:\Work\BreakOutClone\SDL2_ttf-2.0.14\lib\x86;C:\Work\BreakOutClone\SDL2_mixer-2.0.1\lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -64,11 +68,15 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /d /y "$(ProjectDir)*.*" "$(OutDir)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
-    <None Include="Resources\Images\Paddle.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\TinyXML\tinystr.cpp" />
@@ -133,13 +141,6 @@
     <ClInclude Include="Code\ResourceManager\AudioManager.h" />
     <ClInclude Include="Code\ResourceManager\ResourceManager.h" />
     <ClInclude Include="Code\Timer\Timer.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Resources\Images\Ball2.png" />
-    <Image Include="Resources\Images\BrickHard.bmp" />
-    <Image Include="Resources\Images\BrickImpenetrable.bmp" />
-    <Image Include="Resources\Images\BrickMedium.bmp" />
-    <Image Include="Resources\Images\BrickSoft.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
